# QuestQuest

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  example.rs  software_architecture.md
AI/examples/: independent_demo.rs
AI/src/: action.rs  executor.rs  goals.rs  lib.rs  long_term_goals.rs  planner.rs  world_state.rs
AI/src/actions/: attack.rs  mod.rs  move.rs  r#move.rs
AI/tests/: ai_tests.rs
Combat/: Cargo.toml
Combat/src/: combat_action.rs  combat_resolver.rs  combat_result.rs  combat_stats.rs  lib.rs
Combat/tests/: attack_once.rs
Encyclopedia/: Cargo.toml
Encyclopedia/examples/: encyclopedia_demo.rs
Encyclopedia/src/: encyclopedia.rs  entries.rs  formatters.rs  lib.rs
Game/: Cargo.toml
Game/examples/: ai_demo.rs  ai_visual_demo.rs  demo.rs  evolution_demo.rs  joint_visual_demo.rs  multi_turn_planning_demo.rs  tactical_world_state_demo.rs  xp_distribution_demo.rs
Game/src/: lib.rs  objects.rs  scenario_helpers.rs  scenario_instance.rs  turn_system.rs  world.rs
Game/tests/: defense_display_tests.rs  map_format_tests.rs  world_tests.rs
Graphics/: Cargo.toml  README.md
Graphics/src/: lib.rs  main.rs  movement_animation.rs
Graphics/src/core/: camera.rs  grid.rs  hex_lookup.rs  hexagon.rs  mod.rs  simple_hex.rs
Graphics/src/math/: vec2.rs
Graphics/src/rendering/: guide_builder.rs  mod.rs  renderer.rs  shaders.rs  texture_manager.rs  vertex_buffer.rs
Graphics/src/ui/: combat_panel.rs  encyclopedia_panel.rs  mod.rs  recruitment_panel.rs  submenu_panel_ui.rs  text_renderer.rs  text_vertex.glsl  ui_panel.rs
Items/: Cargo.toml
Items/src/: equipment.rs  item.rs  item_definitions.rs  item_properties.rs  lib.rs
Maps/: test_map.json
QuestApp/: Cargo.toml
QuestApp/src/: encyclopedia_builder.rs  game_scene.rs  lib.rs  main.rs  main_menu.rs  scene_manager.rs
QuestApp/src/game_scene/: mod.rs
QuestApp/src/game_scene/states/: combat.rs  encyclopedia.rs  exploring.rs  menu.rs  mod.rs  pickup.rs  submenu.rs
QuestApp/tests/: combat_state_tests.rs  encyclopedia_state_tests.rs  exploring_state_tests.rs  game_scene_state_tests.rs  game_state_tests.rs  menu_state_tests.rs  pickup_state_tests.rs
Units/: Cargo.toml  TRAIT_SYSTEM.md
Units/docs/: ABILITIES.md  ABILITIES_QUICK_REF.md
Units/examples/: abilities_demo.rs  attack_demo.rs  click_demo.rs  description_demo.rs  dynamic_factory_demo.rs  knight_commander_aura.rs  level_up_demo.rs  structure_demo.rs  trait_demo.rs
Units/src/: ARCHITECTURE.md  ability.rs  attack.rs  base_unit.rs  combat.rs  item.rs  lib.rs  team.rs  unit.rs  unit_class.rs  unit_factory.rs  unit_macros.rs  unit_race.rs  unit_registry.rs  unit_trait.rs  unit_type.rs
Units/src/combat/: mod.rs  resolver.rs
Units/src/structures/: mod.rs  occupancy.rs  structure_factory.rs  structure_stats.rs  structure_trait.rs  structure_type.rs  strucutre_type.rs
Units/src/structures/structure_units/: house.rs  mod.rs  stone_wall.rs
Units/src/units/: mod.rs  unit_guidelines.md
Units/src/units/changeling/: mod.rs
Units/src/units/dragonborn/: mod.rs
Units/src/units/dwarf/: archer.rs  mage.rs  mod.rs  warrior.rs
Units/src/units/dwarf/dwarf_warrior/: mod.rs  veteran_warrior.rs  warrior.rs  young_warrior.rs
Units/src/units/elf/: archer.rs  mage.rs  mod.rs  warrior.rs
Units/src/units/gnome/: mod.rs
Units/src/units/goblin/: chief  chief.rs  grunt  grunt.rs  mod.rs
Units/src/units/half_elf/: mod.rs
Units/src/units/half_orc/: mod.rs
Units/src/units/halfling/: mod.rs
Units/src/units/hobgoblin/: mod.rs
Units/src/units/human/: archer.rs  mage.rs  mod.rs  warrior.rs
Units/src/units/human/human_noble.rs/: human_king.rs  human_noble.rs  human_prince.rs  mod.rs
Units/src/units/human/knights/: human_grand_knight.rs  human_knight.rs  human_knight_commander.rs  human_squire.rs  mod.rs
Units/src/units/human/noble/: human_king.rs  human_noble.rs  human_prince.rs  mod.rs
Units/src/units/kobold/: mod.rs
Units/src/units/lizardfolk/: mod.rs
Units/src/units/orc/: mod.rs
Units/src/units/orc/orc_swordman/: elite_swordman.rs  mod.rs  swordman.rs  young_swordman.rs
Units/src/units/skeleton/: mod.rs
Units/src/units/tiefling/: mod.rs
Units/src/units/triton/: mod.rs
Units/src/units/undead/: mod.rs
Units/src/units/zombie/: mod.rs
Units/tests/: ability_tests.rs  branching_evolution_tests.rs  combat_tests.rs  integration_tests.rs  item_tests.rs  item_tests.rs.old  knight_commander_aura_tests.rs  placeholder.rs  registry_tests.rs  system_tests.rs  unit_tests.rs  unit_trait_test.rs  unit_type_tests.rs
scripts/: README.md  fmt-and-stage.ps1  fmt-and-stage.sh
src/: architecture.rs  lib.rs
