[package]
name = "questquest"
version = "0.1.0"
edition = "2021"

# Example binary
[[bin]]
name = "example"
path = "example.rs"

[dependencies]
graphics = { path = "Graphics" }
units = { path = "Units" }
game = { path = "Game" }

[workspace]
members = [
    "Graphics",
    "Units", 
    "Game",
    "QuestApp"
]

[workspace.package]
version = "0.1.0"
edition = "2021"