[package]
name = "questquest"
version = "0.1.0"
edition = "2021"

# Example binary
[[bin]]
name = "example"
path = "example.rs"

[dependencies]
graphics = { path = "Graphics" }
units = { path = "Units" }
items = { path = "Items" }
game = { path = "Game" }

[workspace]
members = [
    "Graphics",
    "Units",
    "Items",
    "Combat",
    "Game",
    "QuestApp"
]

[workspace.package]
version = "0.1.0"
edition = "2021"