[package]
name = "questquest"
version = "0.1.0"
edition = "2021"

# Library entry point with comprehensive documentation
[lib]
name = "questquest"
path = "src/lib.rs"

# Example binary
[[bin]]
name = "example"
path = "example.rs"

[dependencies]
combat = { path = "Combat" }
graphics = { path = "Graphics" }
units = { path = "Units" }
items = { path = "Items" }
game = { path = "Game" }

[workspace]
members = [
    "Graphics",
    "Units",
    "Items",
    "Combat",
    "Game",
    "QuestApp",
    "ai"
]
default-members = ["QuestApp"]

[workspace.package]
version = "0.1.0"
edition = "2021"