[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
graphics = { path = "../Graphics" }
units = { path = "../Units" }
items = { path = "../Items" }
combat = { path = "../Combat" }
ai = { path = "../ai" }

# External dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
gl = "0.14.0"
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"

[lib]
name = "game"
path = "src/lib.rs"