[package]
name = "units"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path = "../Graphics" }
items = { path = "../Items" }
combat = { path = "../Combat" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
inventory = "0.3"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"